/* istanbul ignore file */
/* tslint:disable */
/* eslint-disable */

export type Organization = {
    id: number;
    name: string;
    description?: Record<string, any>;
};

