@startuml

entity organization {
* id: SERIAL
--
* name: TEXT
* description: TEXT
}

entity product {
* id: SERIAL
--
* name: TEXT
* description: TEXT
* fk_organization: SERIAL
}

entity user {
* id: SERIAL
--
username: VARCHAR(32)
email: VARCHAR(256)
firstName: VARCHAR(256)
lastName: VARCHAR(256)
}

entity user_organization {
* id: SERIAL
--
fk_user: SERIAL
fk_organization: SERIAL
}

product::fk_organization -- organization::id

user_organization::fk_organization -- organization::id
user_organization::fk_user -- user::id

@enduml
